--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ts-lib",
+  "name": "cisco-ise",
   "version": "1.0.0",
-  "description": "Typescript Library Builder",
+  "description": "A wrapper for the Cisco ISE API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -13,10 +13,15 @@
     "typescript",
     "library"
   ],
-  "author": "Anonymous",
+  "author": "Sam Womack",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^10.12.18",
-    "typescript": "^3.2.2"
+    "@types/bluebird": "^3.5.27",
+    "@types/node": "^12.0.3",
+    "typescript": "^3.5.1"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "bluebird": "^3.5.5"
   }
 }
